@@ -39,18 +39,19 @@ dependencies {
 
 	// Spring Boot dependencies
 	implementation("org.springframework.boot:spring-boot-starter-data-redis")
-	implementation("org.springframework.boot:spring-boot-starter-security")
+//	implementation("org.springframework.boot:spring-boot-starter-security")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
-	
+
 	compileOnly("org.projectlombok:lombok")
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	annotationProcessor("org.projectlombok:lombok")
 
 	// Test dependencies
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testImplementation("org.springframework.boot:spring-boot-testcontainers")
-	// testImplementation("org.springframework.security:spring-security-test")
+	testImplementation("org.testcontainers:testcontainers:1.20.1")
+	testImplementation("com.redis:testcontainers-redis:2.2.2")
+//	testImplementation("org.springframework.security:spring-security-test")
 	testImplementation("org.testcontainers:junit-jupiter")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
@@ -58,6 +59,7 @@ dependencies {
 	implementation("javax.annotation:javax.annotation-api:1.3.2")
 	implementation("org.slf4j:slf4j-simple:1.7.32")
 	testImplementation("ch.qos.logback:logback-classic:1.5.6")
+	runtimeOnly("io.netty:netty-resolver-dns-native-macos:4.1.110.Final:osx-aarch_64")
 }
 
 protobuf {
@@ -80,5 +82,6 @@ protobuf {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 	testLogging.showStandardStreams = true
 }
